# ModalRobot

./: .gitignore  CMakeLists.txt  CMakePresets.json  config.h  main.cpp
.github/workflows/: cmake-multi-platform.yml
Encoder/: CMakeLists.txt  Encoder.cpp  Encoder.hpp
Holonomic/: Holonomic.cpp  Holonomic.hpp
LineFollower/: CMakeLists.txt  config.h  main.cpp
LineFollower/Encoder/: Encoder.cpp
LineFollower/Holonomic/: Holonomic.cpp
LineFollower/MotorControl/: CMakeLists.txt  MotorControl.cpp
LineFollower/PID/: PID.cpp  PID.hpp
MotorControl/: CMakeLists.txt  MotorControl.cpp  MotorControl.hpp
PID/: CMakeLists.txt  PID.cpp  PID.hpp
Rapport/: openc.py
Rapport/template/: report.typ
Rapport/template/source/: bibliography.bib  modal_moteur.drawio
TankRobot/: CMakeLists.txt  CMakePresets.json  config.h  main.cpp
TankRobot/Encoder/: CMakeLists.txt  Encoder.hpp
TankRobot/Holonomic/: CMakeLists.txt  Holonomic.hpp
TankRobot/MotorControl/: MotorControl.hpp
TankRobot/Turret/: CMakeLists.txt  Turret.cpp  Turret.hpp
TankRobot/VL53L1/: CMakeLists.txt
TankRobot/VL53L1/platform/src/: vl53l1_platform.c
